fixed collapse

--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,10 @@ header, .navbar {
     color: #fff;
 }
 
+.navbar-toggler {
+    border: 0;
+}
+
 .navbar-expand-lg .navbar-nav .nav-link{
     padding: 1rem .8rem;
     
